changes to nav for mobile

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ import '../styles/navigation.scss';
 
 const { pageType } = Astro.props;
 ---
-<header>
+<header class="navHeader">
   <nav>
     <Hamburger />
     <Navigation pageType={pageType}/>
