--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -98,9 +98,13 @@ section.services{
 
 section.content{
     text-align: center;
-
+    grid-template-columns: auto;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);  
     grid-gap: 1rem;
     place-items: center;
+    @media screen and (min-width: 1024px) {
+        grid-template-columns: repeat(2, 1fr);  
+    }
+    @media screen and (min-width: 1224px) {
+    }
 }
