--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import '../styles/index.scss';
 	<section class="hero">
 		<div class="hero-text fade-in fade-in-up">
 			<h1>clean, fast, and scalable <span class="highlight">websites</span> for small businesses and creatives.</h1>
-			<p>This is the main content of the home page.</p>
+			<!-- <p>This is the main content of the home page.</p>  -->
 			<a class="hero-CTA primary-button" href="/contact">Let’s build your site</a>
 		</div>
 	</section>
