--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,38 +11,39 @@ import '../styles/index.scss';
 <BaseLayout pageTitle="Home" pageType="index">
 	<section class="hero">
 		<div class="hero-text fade-in fade-in-up">
-			<h1>clean, fast, and scalable <span class="highlight">websites</span> for small businesses and creatives.</h1>
+			<h1>Building fast, modern websites that help your business <span class="highlight">stand out</span></h1>
 			<!-- <p>This is the main content of the home page.</p>  -->
 			<a class="hero-CTA primary-button" href="/contact">Let’s build your site</a>
 		</div>
 	</section>
 	<section class="content">
-		<h2>This is a subtitle for the content section</h2>
-		<p>This is some additional content on the home page. You can add more sections as needed to provide information about your website or services.</p>
+		<h2>Who we are + nog ne foto</h2>
+		<p>We build websites that don’t just look great — they perform.
+			We bring together both the technical and creative sides of web development. Our focus is on clean, modern sites that are fast, functional, and built to help your business grow.</p>
 	</section>
 	<section class="services">
 		<h2>Our Services</h2>
 		<p>We offer a range of services to meet your needs. Explore our features below.</p>
 		<div class="service-grid">
 			<div class="service-item glass service1 fade-in fade-in-up">
-				<h3>Service One</h3>
-				<p>Details about service one.</p>
+				<h3>Web development</h3>
+				<p>Custom, fast, and responsive websites built to fit your brand and business goals.</p>
 			</div>
 			<div class="service-item glass service2 fade-in fade-in-up">
-				<h3>Service Two</h3>
-				<p>Details about service two.</p>
+				<h3>SEO & Performance Optimization</h3>
+				<p>Optimized for speed and visibility so your site ranks higher and loads instantly.</p>
 			</div>
 			<div class="service-item glass service3 fade-in fade-in-up">
-				<h3>Service Three</h3>
-				<p>Details about service three.</p>
+				<h3>Design / UI Polish</h3>
+				<p>Clean, modern visuals that make your website stand out while staying user-friendly.</p>
 			</div>
 			<div class="service-item glass service4 fade-in fade-in-up">
-				<h3>Service Four</h3>
-				<p>Details about service four.</p>
+				<h3>Branding & Integration</h3>
+				<p>Cohesive visuals that tell your story and give your business a recognizable look.</p>
 			</div>
 			<div class="service-item  glass service5 fade-in fade-in-up">
-				<h3>Service Five</h3>
-				<p>Details about service five.</p>
+				<h3>Maintenance & Support</h3>
+				<p>Regular updates, backups, and tweaks to keep your site secure and performing smoothly.</p>
 			</div>
 	</section>
 	<CardGrid title="Features" text="Explore the features of our product below.">
