--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -68,7 +68,15 @@
     /* background-color: var(--bg); 
     background: linear-gradient(119deg, $background-color 33%, color.adjust($accent-color, $lightness: -65% )96%);
     background-attachment: fixed; */
-
+  }
+  .animated-bg {
+    /* position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    pointer-events: none;
     background-color: var(--bg);
     background-image: 
       radial-gradient(circle at 20% 30%, rgba(125, 249, 255, 0.25), transparent 20%),
@@ -76,7 +84,21 @@
       radial-gradient(circle at 80% 60%, rgba(125, 249, 255, 0.2), transparent 20%);
     background-attachment: fixed;
     animation: moveBackground 25s ease-in-out infinite, colorPulse 50s linear infinite, hueShift 240s linear infinite;
-    background-size: 200% 200%;
+    background-size: 200% 200%; */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    pointer-events: none;
+    background-color: var(--bg);
+    background-image: radial-gradient(circle at var(--x1, 30%) var(--y1, 30%), rgba(125, 249, 255, 0.25), transparent 20%),
+                radial-gradient(circle at var(--x2, 30%) var(--y2, 80%), rgba(125, 249, 255, 0.5), transparent 30%), 
+                radial-gradient(circle at var(--x3, 90%) var(--y3, 90%), rgba(125, 249, 255, 0.2), transparent 20%);
+    background-blend-mode: screen;
+    animation: moveBackground 25s ease-in-out infinite, colorPulse 50s linear infinite, hueShift 240s linear infinite;
+    transition: background-position 0.1s ease-out;
   }
   main { 
     flex: 1;
@@ -140,11 +162,13 @@
   .highlight{
     color: color.adjust($accent-color, $lightness: -30%);
     font-weight: normal;
+    animation: hueShift 240s linear infinite;
   }
 
   // buttons
   .primary-button {
     color: var(--color);
+    animation: hueShift 240s linear infinite;
     border: none;
     border-radius: $border-radius;
     padding: $base-spacing $base-spacing * 2;
@@ -155,7 +179,7 @@
     text-decoration: none;
 
     width: max-content;
-    
+
     &:hover {
       background-color: color.adjust($primary-color, $lightness: 10%, $alpha: -0.9);
       color: $text-color;
