index changes for content

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -109,6 +109,7 @@ section.content{
     display: flex;
     grid-gap: 1rem;
     place-items: center;
+    flex-direction: column;
     @media screen and (min-width: 1024px) {
         flex-direction: row;
         text-align: left;
