--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -25,7 +25,7 @@ const { pageTitle, pageType} = Astro.props;
 		<script>
 			import "../scripts/navigation.js";
 			import "../scripts/fade-in.js";
-			import "../scripts/animated-bg.js";
+			//import "../scripts/animated-bg.js";
 		</script>
 	</body>
-</html>
+</html> 
