--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,43 +14,31 @@
   }
 
   // typography
-@font-face {
-  font-family: HIDROM;
-  src: url("../assets/fonts/HIDROM.otf") format("opentype");
-  font-weight: normal;
-  font-style: normal;
-}
+  @font-face {
+    font-family: Poison;
+    src: url("../assets/fonts/Poison/otf/Poison-Regular.otf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+  }
 
-@font-face {
-  font-family: MintSpirit;
-  src: url("../assets/fonts/MintSpirit/MintSpirit-Regular.otf") format("opentype");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: MintSpirit Italic;
-  src: url("../assets/fonts/MintSpirit/MintSpirit-Italic.otf") format("opentype");
-  font-weight: normal;
-  font-style: italic;
-}
-@font-face {
-  font-family: MintSpirit Bold;
-  src: url("../assets/fonts/MintSpirit/MintSpirit-Bold.otf") format("opentype");
-  font-weight: bold;
-  font-style: normal;
-}
-@font-face {
-  font-family: MintSpirit Bold Italic;
-  src: url("../assets/fonts/MintSpirit/MintSpirit-BoldItalic.otf") format("opentype");
-  font-weight: bold;
-  font-style: italic;
-}
-@font-face {
-  font-family: Poison;
-  src: url("../assets/fonts/Poison/otf/Poison-Regular.otf") format("opentype");
-  font-weight: normal;
-  font-style: normal;
-}
+  @font-face {
+    font-family: Eau;
+    src: url("../assets/fonts/eau_sans/eau_sans_book.otf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: Eau;
+    src: url("../assets/fonts/eau_sans/eau_sans_bold.otf") format("opentype");
+    font-weight: bold;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: Eau;
+    src: url("../assets/fonts/eau_sans/eau_sans_black.otf") format("opentype");
+    font-weight: bolder;
+    font-style: normal;
+  }
   
   * { box-sizing: border-box; }
   html, body { 
@@ -68,23 +56,9 @@
     /* background-color: var(--bg); 
     background: linear-gradient(119deg, $background-color 33%, color.adjust($accent-color, $lightness: -65% )96%);
     background-attachment: fixed; */
+    // background-image: url('../assets/images/StudioFraktal_BG.jpg');
   }
   .animated-bg {
-    /* position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    pointer-events: none;
-    background-color: var(--bg);
-    background-image: 
-      radial-gradient(circle at 20% 30%, rgba(125, 249, 255, 0.25), transparent 20%),
-      radial-gradient(circle at 50% 60%, rgba(125, 249, 255, 0.5), transparent 30%), 
-      radial-gradient(circle at 80% 60%, rgba(125, 249, 255, 0.2), transparent 20%);
-    background-attachment: fixed;
-    animation: moveBackground 25s ease-in-out infinite, colorPulse 50s linear infinite, hueShift 240s linear infinite;
-    background-size: 200% 200%; */
     position: fixed;
     top: 0;
     left: 0;
@@ -93,12 +67,8 @@
     z-index: -1;
     pointer-events: none;
     background-color: var(--bg);
-    background-image: radial-gradient(circle at var(--x1, 30%) var(--y1, 30%), rgba(125, 249, 255, 0.25), transparent 20%),
-                radial-gradient(circle at var(--x2, 30%) var(--y2, 80%), rgba(125, 249, 255, 0.5), transparent 30%), 
-                radial-gradient(circle at var(--x3, 90%) var(--y3, 90%), rgba(125, 249, 255, 0.2), transparent 20%);
-    background-blend-mode: screen;
-    animation: moveBackground 25s ease-in-out infinite, colorPulse 50s linear infinite, hueShift 240s linear infinite;
-    transition: background-position 0.1s ease-out;
+    background-image: url('../assets/images/StudioFraktal_BG.jpg');
+    background-size: cover;
   }
   main { 
     flex: 1;
@@ -128,6 +98,19 @@
     font-weight: bold;
   }
 
+  h2{
+    font-size: $font-size-h2;
+    font-family: Eau;
+    margin: 0;
+    color: var(--color);
+    font-weight: bold;
+  }
+
+  ul{
+    list-style-type: circle;
+    padding-inline-start: 1rem;
+  }
+
   .glass {
     background: rgba(255, 255, 255, 0.01);
     border: 1px solid rgba(255, 255, 255, 0.15);
@@ -135,28 +118,6 @@
     -webkit-backdrop-filter: blur($blur-amount) saturate(180%);
     box-shadow: $box-shadow-glass;
     overflow: hidden;
-
-    &:hover::before {
-      transform: rotate(30deg) translate(10%, -10%) scale(2);
-      opacity: 0.6;
-    }
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: -50%;
-      left: -50%;
-      background: linear-gradient(
-        130deg,
-        rgba(255, 255, 255, 0.25) 0%,
-        rgba(255, 255, 255, 0.05) 40%,
-        rgba(255, 255, 255, 0) 60%
-      );
-      transform: rotate(15deg);
-      opacity: 0.3;
-      mix-blend-mode: overlay;
-      transition: opacity 0.5s ease, transform 1s ease;
-    }
   }
 
   .highlight{
@@ -168,14 +129,14 @@
   // buttons
   .primary-button {
     color: var(--color);
-    animation: hueShift 240s linear infinite;
-    border: none;
     border-radius: $border-radius;
-    padding: $base-spacing $base-spacing * 2;
+    padding: $base-spacing $base-spacing;
     cursor: pointer;
     transition: background-color $transition-duration;
     text-wrap: nowrap;
-    box-shadow: $box-shadow-low, $box-shadow-inset-low;
+    // box-shadow: $box-shadow-low, $box-shadow-inset-low;
+    box-shadow: $box-shadow-glass;
+    border: 1px solid rgba(255, 255, 255, 0.15);
     text-decoration: none;
 
     width: max-content;
@@ -251,17 +212,4 @@
     }
   }
 
-  @keyframes hueShift {
-    0% { filter: hue-rotate(0deg); }
-    100% { filter: hue-rotate(360deg); }
-  }
-
-  @keyframes colorPulse {
-    0%, 100% {
-      filter: brightness(1) saturate(1);
-    }
-    50% {
-      filter: brightness(1.2) saturate(0.9);
-    }
-  }
 
