--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,3 +3,10 @@
     top: 0;
     z-index: 999;
 }
+
+@media screen and (min-width: 1024px) {
+    .navHeader{
+        position: relative; 
+        top: auto;
+    }
+}
