--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -23,7 +23,7 @@ $base-spacing: 14px;
 
 $font-size-base: 16px;
 $font-size-mobile-navigation: 18px;
-$font-size-desktop-navigation: 20px;
+$font-size-desktop-navigation: .8em;
 $font-size-h1: 2.5rem;
 $font-size-h2: 2rem;
 $font-size-h3: 1.75rem;
@@ -31,7 +31,7 @@ $font-size-h4: 1.5rem;
 $font-size-h5: 1.25rem;
 $font-size-h6: 1rem;
 
-$border-radius: 20px;
+$border-radius: 10px;
 $transition-duration: 0.3s;
 $box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 $max-width: 1200px;
