--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,12 +12,20 @@ import ContentImage1 from '../assets/images/Mockups/FelineConsultingMockup2.png'
 ---
 
 <BaseLayout pageTitle="Home" pageType="index">
-	<section class="hero">
-		<div class="hero-text fade-in fade-in-up">
-			<h1 class="hero-header">We shape what’s next<span class="highlight">.</span></h1>
-			<p class="hero-subtext">Studio Fraktal is een digitaal design- en webcollectief.
-				Wij creëren merken en ervaringen die klaar zijn voor de toekomst.</p>
-			<a class="hero-CTA primary-button" href="/contact">Let’s build your site</a>
+	<section class="hero fade-in fade-in-up">
+		<div class="hero-bg"></div>
+		<div class="glass-card glass-border" aria-label="Intro card">
+			<span class="glass-border" aria-hidden="true"></span>
+			<span class="glass-noise" aria-hidden="true"></span>
+			<span class="glass-glare" aria-hidden="true"></span>
+
+			<h1>We shape what’s next<span class="highlight">.</span></h1>
+			<p>Studio Fraktal is een digitaal design- en webcollectief. We bouwen merken, websites en experiences die klaar zijn voor morgen.</p>
+
+			<div class="cta">
+			<a class="primary-button" href="/contact">Plan een kennismaking</a>
+			<a class="primary-button" href="/werk">Bekijk ons werk</a>
+			</div>
 		</div>
 	</section>
 	<!-- <section class="content">
